# MediaPro

./: README.md
app/: build.gradle
app/cpp/: CMakeLists.txt  com_uns_media_ffmpegnative_FFmpegTool.h  ffmpeg_version.cpp  jni_helper.h  reg_class_define.h
app/cpp/JNI/: jni_load.cpp
app/cpp/common/: CMakeLists.txt  copy_assert_helper.h  jni_load.cpp  native_tool_impl.cpp
app/cpp/ffmepg_install/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswscale.pc
app/cpp/ffmepg_install/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavutil.pc  libpostproc.pc
app/cpp/ffmepg_install/armeabi/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavutil.pc  libpostproc.pc  libswscale.pc
app/cpp/ffmepg_install/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc
app/cpp/ffmepg_install/x86_64/lib/pkgconfig/: libavfilter.pc  libavformat.pc
app/cpp/jni_test/: CMakeLists.txt  jni_load.cpp  jnitest_impl.cpp
app/cpp/media/: CMakeLists.txt  ffmepg_cmd_impl.cpp  ffmpeg_cmd.h  ffmpeg_tool_impl.cpp  ffmpeg_util.h  ffmpeg_version.cpp  global.h  hw_decode_video.cpp  jni_load.cpp  merge.cpp  merge_mp4_util.h
app/cpp/media/ffmepg_install/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libswresample.pc
app/cpp/media/ffmepg_install/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libswresample.pc  libswscale.pc
app/cpp/media/ffmepg_install/armeabi/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libswresample.pc
app/cpp/media/ffmepg_install/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/cpp/media/ffmepg_install/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/cpp/media/ffmpeg_run/: CMakeLists.txt
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/: config.h
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/doc/: config.texi
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/doc/examples/pc-uninstalled/: libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libpostproc-uninstalled.pc
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/ffbuild/: config.fate  config.mak  config.sh
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h
app/cpp/media/ffmpeg_run/ffmpeg-4.0.2/libavcodec/: codec_list.c
app/src/androidTest/java/com/example/mediapro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jni/: JniCallback.java  JniParam.java  JniTest.java
app/src/main/java/com/example/mediapro/: MainActivity.java
app/src/main/java/com/uns/media/ffmpegnative/: FFmpegTool.java  LoadFFmpegHelper.java
app/src/main/java/com/uns/nativeload/: JniLoadHelper.java
app/src/main/java/com/uns/util/: NativeTool.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mediapro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
